# Kun-peng

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  add_library.sh  append_taxonomy_names.sh  cal_memory.sh  kr2r.sh
.githooks/: pre-push
.github/workflows/: release.yaml  rust.yml
banchmark/: OMZ_S138_kraken2.html  min17_kraken2_out_krona.html  min17_kun_peng_out_krona.html
benchmark/: OMZ_S138_kun_peng.html
data/: COVID_19.fa  FluA_H1N1.fa  FluA_H2N2.fa  FluA_H3N2.fa  FluB.fa  HIV_1.fna  MERS.fa  test_interleaved.fastq
docs/: build-db-demo.md  classify-demo.md  hashshard-demo.md
examples/: README.md  build_and_classify.rs  classify_pipeline.rs  taxonomy_inspect.rs
examples/common/: mod.rs
kr2r/: Cargo.toml  README.md
kr2r/benches/: hash_benchmark.rs  kr2r_benchmark.rs  mmscanner_benchmark.rs
kr2r/examples/: build_and_classify.rs
kr2r/src/: args.rs  classify.rs  compact_hash.rs  compact_hash1.rs  db.rs  ertl.rs  feat.rs  hyperloglogplus.rs  iclassify.rs  kr2r_data.rs  kv_store.rs  lib.rs  main.rs  mmscanner.rs  pair.rs  readcounts.rs  report.rs  seq.rs  table.rs  tansform.rs  taxonomy.rs  utils.rs
ncbi/: Cargo.toml  README.md
ncbi/examples/: run_download.rs
ncbi/src/: asmbly.rs  assembly.rs  client.rs  db.rs  down.rs  download.rs  fna.rs  lib.rs  load.rs  main.rs  md5sum.rs  meta.rs  plas.rs  site.rs  task.rs  utils.rs
seqkmer/: Cargo.toml
seqkmer/src/: fasta.rs  fastq.rs  fastx.rs  feat.rs  lib.rs  mmscanner.rs  parallel.rs  reader.rs  seq.rs  utils.rs
src/: args.rs  classify.rs  compact_hash.rs  db.rs  kr2r_data.rs  kv_store.rs  readcounts.rs  report.rs  taxonomy.rs  utils.rs
