[workspace]
members = [
    "ncbi",
    "kr2r",
    "seqkmer"]
resolver = "2"
license = "MIT"
repository = "https://github.com/eric9n/Kun-peng"
keywords = ["bioinformatics", "metagenomics", "microbiome", "sequence-classification", "exposome", "kraken2"]
readme = "README.md"
description = "Kun-peng: an ultra-fast, low-memory footprint and accurate taxonomy classifier for all"

[profile.release]
lto = true
opt-level = "s" # 或者 "z"
debug-assertions = false
# panic = 'abort'
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
strip = true # Remove debug symbols
