[package]
name = "kun_peng"
version = "0.7.8"
edition = "2021"
authors = ["eric9n@gmail.com"]
description = "Kun-peng: an ultra-fast, low-memory footprint and accurate taxonomy classifier for all"
license = "MIT"
repository = "https://github.com/eric9n/Kun-peng"
keywords = ["bioinformatics", "metagenomics", "microbiome", "exposome"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kun_peng"
path = "src/bin/kun.rs"

[features]
double_hashing = []
exact_counting = []

[dependencies]
seqkmer = "0.1.4"
clap = { version = "4.4.10", features = ["derive"] }
hyperloglogplus = { version = "0.4.1", features = ["const-loop"] }
seahash = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
walkdir = "2"
rayon = "1.8"
libc = "0.2"
regex = "1.5.4"
flate2 = "1.0"
dashmap = { version = "6.0.1", features = ["rayon"] }
num_cpus = "1.13.1"
bytemuck = "1.24.0"
md5 = "0.8.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[dev-dependencies]
criterion = "0.7.0"
twox-hash = "2.1.2"
farmhash = { version = "1.1.5" }

[profile.release]
lto = true
opt-level = "s"          # 或者 "z"
debug-assertions = false
# panic = 'abort'
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
strip = true      # Remove debug symbols
