[package]
name = "kr2r"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "estimate_capacity"
path = "src/bin/estimate_capacity.rs"

[[bin]]
name = "build_db"
path = "src/bin/build_db.rs"

[[bin]]
name = "classify"
path = "src/bin/classify.rs"


[[bin]]
name = "inspect"
path = "src/bin/inspect.rs"

[[bin]]
name = "seqid2taxid"
path = "src/bin/seqid2taxid.rs"

[[bin]]
name = "build_k2_db"
path = "src/bin/build_k2_db.rs"


[features]
default = ["dna"]
dna = []
protein = []
double_hashing = []
exact_counting = []

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
seq_io = "0.3.2"
hyperloglogplus = { version = "*", features = ["const-loop"] }
seahash = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9.4"
byteorder = "1.4"
walkdir = "2"
rayon = "1.8"
libc = "0.2"
regex = "1.5.4"


[dev-dependencies]
criterion = "0.5.1"
twox-hash = "1.6.3"
farmhash = {version = "1.1.5"}

[[bench]]
name = "mmscanner_benchmark"
harness = false


[[bench]]
name = "hash_benchmark"
harness = false
