[package]
name = "kr2r"
version = "0.6.8"
edition = "2021"
authors = ["eric9n@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kun_peng"
path = "src/bin/kun.rs"

[features]
double_hashing = []
exact_counting = []

[dependencies]
seqkmer = { version = "0.1.0", path = "../seqkmer" }
clap = { version = "4.4.10", features = ["derive"] }
hyperloglogplus = { version = "*", features = ["const-loop"] }
seahash = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
walkdir = "2"
rayon = "1.8"
libc = "0.2"
regex = "1.5.4"
flate2 = "1.0"
dashmap = { version = "6.0.1", features = ["rayon"] }
num_cpus = "1.13.1"

[dev-dependencies]
criterion = "0.5.1"
twox-hash = "1.6.3"
farmhash = {version = "1.1.5"}
