[package]
name = "ncbi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ncbi"
path = "src/bin/ncbi.rs"

[[bin]]
name = "ncbi_md5"
path = "src/bin/md5.rs"

[dependencies]
reqwest = { version = "0.11", features = ["stream", "multipart", "gzip"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
regex = "1"
clap = { version = "4.4.10", features = ["derive"] }
futures-util = "0.3.30"
reqwest-retry = "0.3"
reqwest-middleware = "0.2.4"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10.1"
md-5 = "0.10.6"
