[package]
name = "ncbi"
version = "0.1.7"
edition = "2021"
authors = ["eric9n@gmail.com"]
license = "MIT"
repository = "https://github.com/eric9n/Kun-peng"
keywords = ["bioinformatics", "metagenomics", "microbiome", "sequence-classification", "exposome", "kraken2"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["stream", "multipart", "gzip"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
regex = "1"
clap = { version = "4.4.10", features = ["derive"] }
futures-util = "0.3.30"
reqwest-retry = "0.6.1"
reqwest-middleware = "0.3"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11.0"
md-5 = "0.10.6"
async-compression = "0.4.5"
tar = "0.4"
num_cpus = "1.13.1"
