[package]
name = "seqkmer"
version = "0.1.0"
edition = "2021"
authors = ["eric9n@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
scoped_threadpool = "0.1.9"
flate2 = "1.0"

[features]
default = ["dna"]
dna = []
protein = []
