[package]
name = "seqkmer"
version = "0.1.0"
edition = "2021"
authors = ["eric9n@gmail.com"]
description = "sequence kmer"
license = "MIT"
repository = "https://github.com/eric9n/Kun-peng"
keywords = ["bioinformatics", "metagenomics", "microbiome", "sequence-classification", "exposome", "kraken2"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
scoped_threadpool = "0.1.9"
flate2 = "1.0"

[features]
default = ["dna"]
dna = []
protein = []
